--- a/sections/product-slider.liquid
+++ b/sections/product-slider.liquid
@@ -79,7 +79,7 @@
 
   <script>
     // Set the date we're counting down to
-var countDownDate = new Date("{{section.settings.date}}").getTime();
+  var countdwon = new Date("{{section.settings.date}}").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
@@ -88,7 +88,7 @@ var x = setInterval(function() {
   var now = new Date().getTime();
 
   // Find the distance between now and the count down date
-  var distance = countDownDate - now;
+  var distance = countdwon - now;
 
   // Time calculations for day, hour, minute and second
   var day = Math.floor(distance / (1000 * 60 * 60 * 24));
