--- a/sections/product-slider.liquid
+++ b/sections/product-slider.liquid
@@ -79,11 +79,11 @@
 
   <script>
     // Set the date we're counting down to
-  var cc = `{{ section.id }}`
+  var cc = countdown-`{{ section.id }}`
   cc = new Date("{{section.settings.date}}").getTime();
 
 // Update the count down every 1 second
-var x = setInterval(function() {
+   var x = setInterval(function() {
 
   // Get today's date and time
   var now = new Date().getTime();
