--- a/sections/product-slider.liquid
+++ b/sections/product-slider.liquid
@@ -79,18 +79,15 @@
 
   <script>
     // Set the date we're counting down to
-  var cc = countdown-`{{ section.id }}`;
-  var distance =dis-`{{ section.id }}`;
-  var now =now-`{{ section.id }}`;
-  var x =x-`{{ section.id }}`;
-  
+  var cc = countdown-`{{ section.id }}`
+  var distance =dis-`{{ section.id }}`
   cc = new Date("{{section.settings.date}}").getTime();
 
 // Update the count down every 1 second
-    x = setInterval(function() {
+   var x = setInterval(function() {
 
   // Get today's date and time
-   now = new Date().getTime();
+  var now = new Date().getTime();
 
   // Find the distance between now and the count down date
    distance = cc - now;
