--- a/sections/product-slider.liquid
+++ b/sections/product-slider.liquid
@@ -79,8 +79,7 @@
 
   <script>
     // Set the date we're counting down to
-  var cc = countdown-{{ section.id }};
-  var distance =dis-{{ section.id }};
+  var cc = countdown-`{{ section.id }}`
   cc = new Date("{{section.settings.date}}").getTime();
 
 // Update the count down every 1 second
@@ -90,7 +89,7 @@
   var now = new Date().getTime();
 
   // Find the distance between now and the count down date
-   distance = cc - now;
+  var distance = cc - now;
 
   // Time calculations for day, hour, minute and second
   var day = Math.floor(distance / (1000 * 60 * 60 * 24));
