--- a/sections/mega-menu.liquid
+++ b/sections/mega-menu.liquid
@@ -27,7 +27,34 @@
   <div class="color-{{ section.settings.color_scheme }} gradient isolate">
     <div class="section-{{ section.id }}-padding page-width">
        <div class="lmenu">
-         Categories
+         Categories 
+         <ul class="menu">
+  {% for link in section.settings.menu.links %}
+    <li class="menu-link">
+      <a href="{{ link.url }}">{{ link.title }}</a>
+
+      {% if link.links.size > 0 %}
+        <ul class="menu dropdown-child">
+          {% for child_link in link.links %}
+            <li class="menu-link">
+              <a href="{{ child_link.url }}">{{ child_link.title }}</a>
+
+              {% if child_link.links.size > 0 %}
+                <ul class="menu dropdown-grandchild">
+                  {% for grandchild_link in child_link.links %}
+                    <li class="menu-link">
+                      <a href="{{ grandchild_link.url }}">{{ grandchild_link.title }}</a>
+                    </li>
+                  {% endfor %}
+                </ul>
+              {% endif %}
+            </li>
+          {% endfor %}
+        </ul>
+      {% endif %}
+    </li>
+  {% endfor %}
+</ul>
        </div>
        <div class="rmenu">
         <a href="">Item</a>
@@ -43,6 +70,12 @@
     "tag": "section",
     "class": "section",
     "settings": [
+        {
+      "type": "link_list",
+      "id": "menu",
+      "default": "main-menu",
+      "label": "t:sections.header.settings.menu.label"
+        },
       {
         "type": "color_scheme",
         "id": "color_scheme",
