--- a/sections/mega-menu.liquid
+++ b/sections/mega-menu.liquid
@@ -18,20 +18,56 @@
     .rmenu{
         float: right;
     }
-    .rmenu a{
-        text-decoration: none;
-        padding: 20px;
-        border-radius: 1px solid #000;
-    }
-    .mega-menu ul li{
+    ul {
+        background: darkorange;
         list-style: none;
-    }
-    .mega-menu ul.menu{
-        display: none;
-    }
-    .mega-menu .lmenu:hover ul.menu{
+        margin: 0;
+        padding-left: 0;
+        }
+
+        li {
+        color: #fff;
+        background: darkorange;
         display: block;
-    }
+        float: left;
+        padding: 1rem;
+        position: relative;
+        text-decoration: none;
+        transition-duration: 0.5s;
+        }
+        
+        li a {
+        color: #fff;
+        }
+
+        li:hover {
+        background: red;
+        cursor: pointer;
+        }
+
+        ul li ul {
+        background: orange;
+        visibility: hidden;
+        opacity: 0;
+        min-width: 5rem;
+        position: absolute;
+        transition: all 0.5s ease;
+        margin-top: 1rem;
+        left: 0;
+        display: none;
+        }
+
+        ul li:hover > ul,
+        ul li ul:hover {
+        visibility: visible;
+        opacity: 1;
+        display: block;
+        }
+
+        ul li ul li {
+        clear: both;
+        width: 100%;
+        }
   </style>
   <div class="mega-menu color-{{ section.settings.color_scheme }} gradient isolate">
     <div class="section-{{ section.id }}-padding page-width">
