--- a/sections/mega-menu.liquid
+++ b/sections/mega-menu.liquid
@@ -18,6 +18,12 @@
     .rmenu{
         float: right;
     }
+    .rmenu a{
+        text-decoration: none;
+        padding: 20px;
+        border-radius: 1px solid #000;
+        color: #fff;
+    }
     ul {
         background: darkorange;
         list-style: none;
@@ -29,7 +35,6 @@
         color: #fff;
         background: darkorange;
         display: block;
-        float: left;
         padding: 1rem;
         position: relative;
         text-decoration: none;
