--- a/sections/mega-menu.liquid
+++ b/sections/mega-menu.liquid
@@ -13,7 +13,8 @@
   {%- endstyle -%}
   <style>
     .lmenu{
-        float: left;
+        position: absolute;
+        z-index: 999;
     }
     .rmenu{
         float: right;
@@ -22,7 +23,7 @@
         text-decoration: none;
         padding: 20px;
         border-radius: 1px solid #000;
-        color: #fff;
+        color: #000;
     }
     ul {
         background: darkorange;
