--- a/sections/mega-menu.liquid
+++ b/sections/mega-menu.liquid
@@ -36,8 +36,8 @@
         }
 
         li {
-        color: rgb(var(--color-button));
-        background: darkorange;
+        color: #fff;
+        background: rgba(var(--color-button), .9);
         display: block;
         padding: 1rem;
         position: relative;
@@ -50,12 +50,12 @@
         }
 
         li:hover {
-        background: red;
+        background: rgba(var(--color-button), 1);
         cursor: pointer;
         }
 
         ul li ul {
-        background: orange;
+        background: rgba(var(--color-button), .9);;
         visibility: hidden;
         opacity: 0;
         min-width: 5rem;
