--- a/sections/mega-menu.liquid
+++ b/sections/mega-menu.liquid
@@ -18,6 +18,7 @@
     .lmenu{
         position: absolute;
         top: 0;
+        background: rgb(var(--color-button));
     }
     .rmenu{
         float: right;
