--- a/sections/mega-menu.liquid
+++ b/sections/mega-menu.liquid
@@ -18,7 +18,6 @@
     .lmenu{
         position: absolute;
         top: 0;
-        background: rgb(var(--color-button));
     }
     .rmenu{
         float: right;
@@ -36,12 +35,11 @@
         padding-left: 0;
         }
 
-        li {
+        li, .lmenu {
         color: #fff;
         background: rgba(var(--color-button), .9);
         display: block;
         padding: 1rem;
-        position: relative;
         text-decoration: none;
         transition-duration: 0.5s;
         }
