--- a/sections/mega-menu.liquid
+++ b/sections/mega-menu.liquid
@@ -28,12 +28,13 @@
     }
     .rmenu a{
         text-decoration: none;
-        padding: 20px;
+        padding: 10px 20px;
         border-right: 1px solid #000;
         color: #000;
     }
     .rmenu a:last-of-type{
         border: none;
+        padding-right: 0px;
     }
     ul {
         background: rgb(var(--color-button));
