--- a/sections/mega-menu.liquid
+++ b/sections/mega-menu.liquid
@@ -21,14 +21,14 @@
     }
     .rmenu{
         position: absolute;
-        right: 0;
-        top: 0;
+        right: 50px;
+        top: 10;
         font-size: 20px;
         font-weight: bold;
     }
     .rmenu a{
         text-decoration: none;
-        padding: 10px 20px;
+        padding: 0px 20px;
         border-right: 1px solid #000;
         color: #000;
     }
@@ -45,7 +45,7 @@
 
         li, .lmenu {
         color: #fff;
-        background: rgba(var(--color-button), .9);
+        background: rgba(var(--color-button), 1);
         display: block;
         padding: 1rem;
         text-decoration: none;
