--- a/sections/mega-menu.liquid
+++ b/sections/mega-menu.liquid
@@ -57,7 +57,7 @@
         }
 
         li:hover {
-        background: rgba(var(--color-button), 1);
+        background: yellow;
         cursor: pointer;
         }
 
