--- a/sections/mega-menu.liquid
+++ b/sections/mega-menu.liquid
@@ -22,7 +22,7 @@
     .rmenu{
         position: absolute;
         right: 50px;
-        top: 10;
+        top: 10px;
         font-size: 20px;
         font-weight: bold;
     }
@@ -57,7 +57,7 @@
         }
 
         li:hover {
-        background: yellow;
+        background: rgba(var(--color-button), 1);
         cursor: pointer;
         }
 
@@ -88,12 +88,14 @@
             display: none;
             visibility: hidden;
             opacity: 0;
+            top: 100%;
             transition: all 0.5s ease;
         }
         .mega-menu .lmenu:hover ul{
             display: block;
             visibility: visible;
             opacity: 1;
+            top: 0;
         }
   </style>
   <div class="mega-menu color-{{ section.settings.color_scheme }} gradient isolate">
