--- a/sections/mega-menu.liquid
+++ b/sections/mega-menu.liquid
@@ -50,6 +50,7 @@
         padding: 1rem;
         text-decoration: none;
         transition-duration: 0.5s;
+        transition: all 0.5s ease;
         }
         
         li a {
