--- a/sections/mega-menu.liquid
+++ b/sections/mega-menu.liquid
@@ -93,6 +93,7 @@
             transition: all 0.5s ease;
         }
         .mega-menu .lmenu:hover ul{
+            transition: all 0.5s ease;
             display: block;
             visibility: visible;
             opacity: 1;
