--- a/sections/mega-menu.liquid
+++ b/sections/mega-menu.liquid
@@ -80,6 +80,7 @@
         width: 100%;
         }
         .mega-menu ul{
+            display:none;
             visibility: hidden;
             opacity: 0;
             top: 100%;
@@ -87,6 +88,7 @@
         }
         .mega-menu .lmenu:hover ul{
             transition: all 0.5s ease;
+            display: block;
             visibility: visible;
             opacity: 1;
             top: 0;
