--- a/sections/mega-menu.liquid
+++ b/sections/mega-menu.liquid
@@ -129,8 +129,7 @@
        <div class="rmenu">
         {% for block in section.blocks %}
             <a href="{{block.link}}">{{block.label}}</a>
-        {% endfor %}
-    
+        {% endfor %}  
        </div>
     </div>
   </div>
@@ -190,7 +189,7 @@
                 "label": "Link Label"
                 },
                 {
-                "type": "text",
+                "type": "url",
                 "id": "link",
                 "label": "Link Url"
                 }
