--- a/sections/mega-menu.liquid
+++ b/sections/mega-menu.liquid
@@ -130,6 +130,9 @@
         <a href="">IItem</a> 
         <a href="">IItem</a> 
         <a href="">IItem</a> 
+        {% for block in section.blocks %}
+           <a href="{{block.settings.link}}"></a>
+          {% endfor %}
        </div>
     </div>
   </div>
