--- a/sections/countdown.liquid
+++ b/sections/countdown.liquid
@@ -27,7 +27,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: space-around;
 }
 #countdown .offer-details > * {
     margin: 0px;
