--- a/sections/new-header.liquid
+++ b/sections/new-header.liquid
@@ -189,7 +189,31 @@
         "unit": "px",
         "label": "t:sections.all.padding.padding_bottom",
         "default": 52
-      }
+      },
+      {
+      "type": "link_list",
+      "id": "left_menu",
+      "default": "main-menu",
+      "label": "Left menu"
+    },
+    {
+      "type": "link_list",
+      "id": "middle_menu",
+      "default": "main-menu",
+      "label": "Middle menu"
+    },
+    {
+      "type": "link_list",
+      "id": "right_menu",
+      "default": "main-menu",
+      "label": "Right menu"
+    },
+    {
+      "type": "link_list",
+      "id": "mobile_menu",
+      "default": "main-menu",
+      "label": "Mobile menu"
+    }
     ],
     "presets": [
       {
