--- a/sections/new-header.liquid
+++ b/sections/new-header.liquid
@@ -13,6 +13,7 @@
   {%- endstyle -%}
   <!--     bootstrap -->
   <link rel="stylesheet" href="{{ 'bootstrap.min.css' | asset_url }}">
+  <link rel="stylesheet" href="{{ 'headercustom.css' | asset_url }}">
   <div class="color-{{ section.settings.color_scheme }} gradient isolate">
     <div class="section-{{ section.id }}-padding page-width">
         <div class="row desktop-menu">
