--- a/sections/new-header.liquid
+++ b/sections/new-header.liquid
@@ -154,6 +154,7 @@
   </div>
 
   <script src="{{ 'bootstrap.min.js' | asset_url }}" defer="defer"></script>
+  <script src="{{ 'megamenu.js' | asset_url }}" defer="defer"></script>
   
   {% schema %}
   {
