--- a/sections/new-header.liquid
+++ b/sections/new-header.liquid
@@ -11,8 +11,9 @@
       }
     }
   {%- endstyle -%}
-   
+    {{ 'bootstrap.min.css' | asset_url | stylesheet_tag }}
   <link rel="stylesheet" href="{{ 'headercustom.css' | asset_url }}">
+
   <div class="color-{{ section.settings.color_scheme }} gradient isolate">
     <div class="section-{{ section.id }}-padding page-width">
       <div class="header-bottom">
