--- a/assets/headercustom.css
+++ b/assets/headercustom.css
@@ -1,4 +1,7 @@
 /* Header Bottom */ 
+ul {
+    list-style: none;
+}
 .header-bottom {
 	background-color:#f28b00;
 }
@@ -19,7 +22,7 @@
 -------------------------------------------------------------- */
 #mega-menu {
 	position:relative;
-	top:4px;
+	top:0px;
 	height:55px;
 	width:250px;
 	-webkit-transition:all 0.3s ease-in-out;
