--- a/sections/new-header.liquid
+++ b/sections/new-header.liquid
@@ -16,7 +16,7 @@
   <div class="color-{{ section.settings.color_scheme }} gradient">
     <div class="section-{{ section.id }}-padding page-width">
       <div class="header-bottom">
-        <div class="container">
+        <div class="">
           <div class="row">
             <div class="col-md-3 col-2">
               <div id="mega-menu">
