--- a/assets/headercustom.css
+++ b/assets/headercustom.css
@@ -40,8 +40,6 @@ ul {
 	padding-left:87px;
 	line-height:65px;
 	background-color:#484848;
-	border-top-left-radius:9px;
-	border-top-right-radius:9px;
 	position:relative;
 	z-index:98;
 	cursor:pointer;
@@ -396,6 +394,8 @@ ul {
 	font-size:14px;
 	font-weight:600;
 	position:relative;
+	text-decoration: none;
+	padding-right: 10px;
 }
 
 .today-deal a:before {
