--- a/sections/new-header.liquid
+++ b/sections/new-header.liquid
@@ -747,7 +747,7 @@
       },
       {
       "type": "link_list",
-      "id": "left_menu",
+      "id": "menu",
       "default": "main-menu",
       "label": "Left menu"
     },
