--- a/sections/new-header.liquid
+++ b/sections/new-header.liquid
@@ -685,7 +685,7 @@
               </div>
             </div>
             <!-- /.col-md-3 col-2 -->
-            <div class="col-md-9 col-10">
+            <div class="col-md-9 col-10 mainnav" id="mainnav">
               {% render 'header-mega-menu' %}
               {% comment %} <div class="nav-wrap">
                 <div id="mainnav" class="mainnav">
