--- a/sections/new-header.liquid
+++ b/sections/new-header.liquid
@@ -685,9 +685,8 @@
               </div>
             </div>
             <!-- /.col-md-3 col-2 -->
-            <div class="col-md-9 col-10 mainnav" id="mainnav">
-              {% render 'header-mega-menu' %}
-              {% comment %} <div class="nav-wrap">
+            <div class="col-md-9 col-10 ">
+              <div class="nav-wrap">
                 <div id="mainnav" class="mainnav">
                   <ul class="menu">
                     <li class="column-1">
@@ -1299,7 +1298,8 @@
                   <!-- /.menu -->
                 </div>
                 <!-- /.mainnav -->
-              </div> {% endcomment %}
+              </div> 
+              
               <!-- /.nav-wrap -->
               <div class="today-deal">
                 <a href="#" title="">TODAY DEALS</a>
