--- a/sections/new-header.liquid
+++ b/sections/new-header.liquid
@@ -693,96 +693,17 @@
                     <li class="column-1">
                       <a href="#" title="">{{- link.title | escape -}}</a>
                       <ul class="submenu">
+                        {%- for childlink in link.links -%}
                         <li>
-                          <a href="#" title=""
+                          <a href="{{ childlink.url }}" title=""
                             ><i
                               class="fa fa-angle-right"
                               aria-hidden="true"
                             ></i
-                            >Home Layout 01</a
+                            > {{ childlink.title | escape }}</a
                           >
                         </li>
-                        <li>
-                          <a href="#" title=""
-                            ><i
-                              class="fa fa-angle-right"
-                              aria-hidden="true"
-                            ></i
-                            >Home Layout 02</a
-                          >
-                        </li>
-                        <li>
-                          <a href="#" title=""
-                            ><i
-                              class="fa fa-angle-right"
-                              aria-hidden="true"
-                            ></i
-                            >Home Layout 03</a
-                          >
-                        </li>
-                        <li>
-                          <a href="#" title=""
-                            ><i
-                              class="fa fa-angle-right"
-                              aria-hidden="true"
-                            ></i
-                            >Home Layout 04</a
-                          >
-                        </li>
-                        <li>
-                          <a href="#" title=""
-                            ><i
-                              class="fa fa-angle-right"
-                              aria-hidden="true"
-                            ></i
-                            >Home Layout 05</a
-                          >
-                        </li>
-                        <li>
-                          <a href="#" title=""
-                            ><i
-                              class="fa fa-angle-right"
-                              aria-hidden="true"
-                            ></i
-                            >Home Layout 06</a
-                          >
-                        </li>
-                        <li>
-                          <a href="#" title=""
-                            ><i
-                              class="fa fa-angle-right"
-                              aria-hidden="true"
-                            ></i
-                            >Home Layout 07</a
-                          >
-                        </li>
-                        <li>
-                          <a href="#" title=""
-                            ><i
-                              class="fa fa-angle-right"
-                              aria-hidden="true"
-                            ></i
-                            >Home Layout 08</a
-                          >
-                        </li>
-                        <li>
-                          <a href="#" title=""
-                            ><i
-                              class="fa fa-angle-right"
-                              aria-hidden="true"
-                            ></i
-                            >Home Layout 09</a
-                          >
-                        </li>
-                        <li>
-                          <a href="#" title=""
-                            ><i
-                              class="fa fa-angle-right"
-                              aria-hidden="true"
-                            ></i
-                            >Home Layout 10</a
-                          >
-                        </li>
+                        {% endfor %}
                       </ul>
                       <!-- /.submenu -->
                     </li>
