--- a/sections/new-header.liquid
+++ b/sections/new-header.liquid
@@ -691,7 +691,7 @@
                   <ul class="menu">
                     {%- for link in section.settings.menu.links -%}
                     <li class="column-1">
-                      <a href="#" title="">{{- link.title | escape -}}</a>
+                      <a href="{{  link.url}}" title="">{{- link.title | escape -}}</a>
                       <ul class="submenu">
                         {%- for childlink in link.links -%}
                         <li>
